@@ -2,6 +2,8 @@
   * Added documents in Japanese. [tashen]
   * Supported Ruby 1.9.1.
     * [#20] [Ruby 1.9 Support] :: Running Tests [Alexey.Chebotar]
+  * Bug fixes:
+    * Fixed blank values detection. [David Morton]
 
 1.0.2:
   * Removed Base64 module use.
